// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / DropdownBubble Default Story 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  color: #282823;
  -webkit-transform: translateY(10px);
  -ms-transform: translateY(10px);
  transform: translateY(10px);
}

.c0:before {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: 100%;
  border-bottom: 6px solid;
  border-bottom-color: #BCBCB6;
}

.c0:after {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: calc(100% - 1px);
  border-bottom: 6px solid;
  border-bottom-color: #FFFFFF;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 46px;
  line-height: 1.0434782608695652;
}

@media (min-width:760px) {
  .c1 {
    font-size: 48px;
    line-height: 1.0833333333333333;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Hello world!
  </span>
</div>
`;

exports[`Storyshots Atoms / DropdownBubble Different Placement And Triangle Position 1`] = `
.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  color: #282823;
  -webkit-transform: translateY(10px);
  -ms-transform: translateY(10px);
  transform: translateY(10px);
}

.c4:before {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: 100%;
  border-bottom: 6px solid;
  border-bottom-color: #BCBCB6;
}

.c4:after {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: calc(100% - 1px);
  border-bottom: 6px solid;
  border-bottom-color: #FFFFFF;
}

.c6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  color: #282823;
  -webkit-transform: translateY(10px);
  -ms-transform: translateY(10px);
  transform: translateY(10px);
}

.c6:before {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: 100%;
  border-bottom: 6px solid;
  border-bottom-color: #BCBCB6;
}

.c6:after {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: calc(100% - 1px);
  border-bottom: 6px solid;
  border-bottom-color: #FFFFFF;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  color: #282823;
  -webkit-transform: translateY(10px);
  -ms-transform: translateY(10px);
  transform: translateY(10px);
}

.c7:before {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: 100%;
  border-bottom: 6px solid;
  border-bottom-color: #BCBCB6;
}

.c7:after {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  bottom: calc(100% - 1px);
  border-bottom: 6px solid;
  border-bottom-color: #FFFFFF;
}

.c8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  color: #282823;
  -webkit-transform: translateY(-10px);
  -ms-transform: translateY(-10px);
  transform: translateY(-10px);
}

.c8:before {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: 100%;
  border-top: 6px solid;
  border-top-color: #BCBCB6;
}

.c8:after {
  left: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: calc(100% - 1px);
  border-top: 6px solid;
  border-top-color: #FFFFFF;
}

.c9 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  color: #282823;
  -webkit-transform: translateY(-10px);
  -ms-transform: translateY(-10px);
  transform: translateY(-10px);
}

.c9:before {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: 100%;
  border-top: 6px solid;
  border-top-color: #BCBCB6;
}

.c9:after {
  right: 20px;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: calc(100% - 1px);
  border-top: 6px solid;
  border-top-color: #FFFFFF;
}

.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 0;
  border: 1px solid #BCBCB6;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px 0 rgba(40,40,35,0.15);
  color: #282823;
  -webkit-transform: translateY(-10px);
  -ms-transform: translateY(-10px);
  transform: translateY(-10px);
}

.c10:before {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: 100%;
  border-top: 6px solid;
  border-top-color: #BCBCB6;
}

.c10:after {
  left: 50%;
  position: absolute;
  width: 0;
  height: 0;
  content: '';
  speak: none;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  top: calc(100% - 1px);
  border-top: 6px solid;
  border-top-color: #FFFFFF;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 46px;
  line-height: 1.0434782608695652;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

@media (min-width:760px) {
  .c5 {
    font-size: 48px;
    line-height: 1.0833333333333333;
  }
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Placement Bottom, Arrow Left
      </span>
    </div>
    <div>
      <div
        className="c4"
      >
        <span
          className="c5"
        >
          Hello world!
        </span>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Placement Bottom, Arrow Right
      </span>
    </div>
    <div>
      <div
        className="c6"
      >
        <span
          className="c5"
        >
          Hello world!
        </span>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Placement Bottom, Arrow Center
      </span>
    </div>
    <div>
      <div
        className="c7"
      >
        <span
          className="c5"
        >
          Hello world!
        </span>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Placement Top, Arrow Left
      </span>
    </div>
    <div>
      <div
        className="c8"
      >
        <span
          className="c5"
        >
          Hello world!
        </span>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Placement Top, Arrow Right
      </span>
    </div>
    <div>
      <div
        className="c9"
      >
        <span
          className="c5"
        >
          Hello world!
        </span>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Placement Top, Arrow Center
      </span>
    </div>
    <div>
      <div
        className="c10"
      >
        <span
          className="c5"
        >
          Hello world!
        </span>
      </div>
    </div>
  </div>
</div>
`;
